# Ash-spider

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
crawlers/: __init__.py  idealo.py  kleineskraftwerk.py  priwatt.py
