[project]
name = "ash-spider"
version = "0.1.0"
description = "Web crawler suite for price comparison and product data extraction"
authors = [{name = "Ash Spider Team"}]
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
